packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_errors/invalid_pkgbase_header_delimiter.srcinfo
# Delimiter should have spaces.
pkgbase=test
	pkgver = 1.0.0
	pkgrel = 1
